# Hamming-Tree

./: CMakeLists.txt  README.md
src/hammingTree/: treeBuildSettings.h
src/hammingTree/common/types/methods/: QUICCIDescriptor.h  RICIDescriptor.h  SpinImageDescriptor.h
src/hammingTree/cpu/index/: IndexBuilder.cpp  IndexBuilder.h  IndexIO.h  IndexQueryer.h  NodeBlockCache.h  SequentialIndexQueryer.h
src/hammingTree/cpu/index/types/: BitCountMipmapStack.h  Index.h  IndexEntry.h  NodeBlock.h  NodeBlockEntry.h
src/hammingTree/index/: IndexBuilder.cpp  IndexBuilder.h  IndexIO.cpp  IndexIO.h  IndexQueryer.cpp  IndexQueryer.h  NodeBlockCache.cpp  NodeBlockCache.h  SequentialIndexQueryer.cpp  SequentialIndexQueryer.h
src/hammingTree/index/types/: BitCountMipmapStack.h  IndexEntry.h  NodeBlock.h
src/hammingTree/utilities/dumpers/: descriptors.h
src/hammingTree/utilities/mesh/: modelScaler.cpp  modelScaler.h
src/hammingTree/utilities/readers/: quicciReader.cpp  quicciReader.h
tools/compressor/: main.cpp
tools/indexBenchmark/: main.cpp
tools/indexbuilder/: main.cpp
tools/indexqueryer/: main.cpp
